--- a/resources/sass/blog.scss
+++ b/resources/sass/blog.scss
@@ -1,3 +1,15 @@
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: $primary;
+}
+
+body {
+  overflow: hidden;
+}
+
 article {
     img {
         max-width: 100%;
